# waldo_ros

./: README.md
waldo_control/: CMakeLists.txt  package.xml
waldo_control/config/: ros_controllers.yaml  rsi_params.yaml
waldo_description/: CMakeLists.txt  package.xml
waldo_description/launch/: waldo.rviz  waldo_rviz.launch
waldo_description/urdf/: kr16_2.gazebo  kr16_2.urdf  kr16_2.xacro  kr16_2_macro.xacro
waldo_moveit/: .setup_assistant  CMakeLists.txt  package.xml
waldo_moveit/config/: fake_controllers.yaml  kinematics.yaml  kuka_kr16_2.srdf  ompl_planning.yaml
waldo_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  kuka_kr16_2_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  real.launch  ros_controllers.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
waldo_paint/: CMakeLists.txt  package.xml
waldo_paint/launch/: broadcast_canvas.launch  follow_vive.launch  interactive_canvas_positioning.launch  vive_auto_calibrate.launch  vive_tracking.launch  waldo_calibrate_tracking.launch  waldo_plot_server.launch  waldo_svg_paint.launch  waldo_track_canvas.launch
waldo_paint/scripts/: broadcast_canvas.py  follow_vive.py  interactive_canvas_positioning.py  optimize_calibration.py  requirements.txt  vive_auto_calibrate.py  vive_tracking.py  waldo_calibrate_tracking.py  waldo_plot_server.py  (+2 more)
